--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "test2": {
+    "test-routing": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/test2",
+            "outputPath": "dist/test-routing",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -66,18 +66,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "test2:build"
+            "browserTarget": "test-routing:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "test2:build:production"
+              "browserTarget": "test-routing:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "test2:build"
+            "browserTarget": "test-routing:build"
           }
         },
         "test": {
@@ -114,15 +114,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "test2:serve"
+            "devServerTarget": "test-routing:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "test2:serve:production"
+              "devServerTarget": "test-routing:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "test2"
+  "defaultProject": "test-routing"
 }
